# vote

./: .gitignore  CMakeLists.txt  LICENSE  contributors.txt  data.hpp  main.cpp  readme.md  student_database.cpp  student_database.h
task/: readme.md  tools.md
tool/: json.cpp  json.h
ui/: index.hpp  index.html  student.hpp  student.html  vote.hpp  vote.html
